[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain_community>=0.3.27",
    "langchain>=0.3.27",
    "chromadb>=1.0.15",
    "pymupdf",
    "ragas==0.3.0",
    "tiktoken>=0.9.0",
    "langchain_openai>=0.3.30",
    "Pillow",
    "datasets",
    "langchain-chroma"
]
